feat: added tests for port forwarding
Signed-off-by: Andre Dietisheim <adietish@redhat.com>